--- a/Assignment-1/css/styles.css
+++ b/Assignment-1/css/styles.css
@@ -145,3 +145,28 @@ section{
 .random-button > div:nth-child(2) > button{
     background-color: cyan;
 }
+
+.story-output{
+    margin-top: 20px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: #fff;
+    min-height: 100px;
+}
+#story{
+    margin: 0;
+    line-height: 1.5;
+}
+
+.hightlight{
+    background-color: black;
+    font-weight: bold;
+    color: white;
+    padding: 2px 4px;
+    border-radius: 4px;
+}
+.active{
+    border: 2px solid white;
+    border-radius: 4px;
+    padding: 2px;
+}
