--- a/Assignment-2/css/style.css
+++ b/Assignment-2/css/style.css
@@ -33,6 +33,12 @@ header{
     text-align: center;
     margin-top: 20px;
 }
+.checkout-form{
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+}
 fieldset{
     margin: 2em 0;
     padding: 1em 2em;
@@ -65,4 +71,10 @@ input[type="submit"], input[type="reset"]{
 }
 input[type="submit"]:hover, input[type="reset"]:hover{
     background-color: #000000;
+}
+.footer{
+    text-align: center;
+    padding: 1em;
+    background-color: purple;
+    margin-top: 2em;
 }
